@@ -67,6 +67,16 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
   <li>
 	<font color=red>*new*</font>
 	[05/2025]
+	Our team achieved <b>2nd place</b> in the AVERITEC Shared Task hosted by <a href="https://2025.aclweb.org/">ACL 2025</a> Workshop <a href="https://fever.ai/task.html">FEVER</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
+	[05/2025]
+	<b>Three papers</b> (Active Learning, GUI Agent (findings), IR (findings)) are accepted to <a href="https://2025.aclweb.org/">ACL 2025</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
+	[05/2025]
 	<b>Two papers</b> (Image Captioning, LLM long context) are accepted to <a href="https://icml.cc/">ICML 2025</a>.
   </li>
   <li>
@@ -75,12 +85,10 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
 	<b>Three papers</b> (QA, Inductive Reasoning, LVLM) are accepted to <a href="https://2025.naacl.org/">NAACL 2025</a>.
   </li>
   <li>
-	<font color=red>*new*</font>
 	[01/2025]
 	<b>Two papers</b> (Text to ReLighting (main) and Domain specific QA (workshop) ) are accepted to <a href="https://2024.emnlp.org/">AAAI 2025</a>.
   </li>
   <li>
-	<font color=red>*new*</font>
     [12/2024]    	
     I gave a talk at <a href="https://en.snu.ac.kr/index.html">SNU</a>, "Capability of Vision and Language Model for "<b>AI for Social Good</b>"
   </li>
