@@ -1,4 +1,7 @@
 ﻿year,type,title,authors,conference,conference_url,comment,meta_1,meta_1-url,meta_2,meta_2-url,meta_3,meta_3-url,meta_4,meta_4-url
+2025,conference,From Selection to Generation: A Survey of LLM-based Active Learning,"Yu Xia, Subhojyoti Mukherjee, Zhouhang Xie, Junda Wu, Xintong Li, Ryan Aponte, Hanjia Lyu, Joe Barrow, Hongjie Chen, Franck Dernoncourt, Branislav Kveton, Tong Yu, Ruiyi Zhang, Jiuxiang Gu, Nesreen K. Ahmed, Yu Wang, Xiang Chen, Hanieh Deilamsalehy, Sungchul Kim, Zhengmian Hu, Yue Zhao, Nedim Lipka, Seunghyun Yoon, Ting-Hao Kenneth Huang, Zichao Wang, Puneet Mathur, Soumyabrata Pal, Koyel Mukherjee, Zhehao Zhang, Namyong Park, Thien Huu Nguyen, Jiebo Luo, Ryan A. Rossi, Julian McAuley",ACL 2025,https://2025.aclweb.org/,0,pdf,https://arxiv.org/pdf/2502.11767,0,0,0,0,0,0
+2025,conference,Hypothetical Documents or Knowledge Leakage? Rethinking LLM-based Query Expansion,"Yejun Yoon, Jaeyoon Jung, Seunghyun Yoon, Kunwoo Park",ACL 2025 Findings,https://2025.aclweb.org/,0,pdf,https://arxiv.org/pdf/2504.14175,0,0,0,0,0,0
+2025,conference,"Click, Type, Repeat: A Comprehensive Survey on GUI Agents","Dang Nguyen, Jian Chen, Yu Wang, Gang Wu, Namyong Park, Zhengmian Hu, Hanjia Lyu, Junda Wu, Ryan Aponte, Yu Xia, Xintong Li, Jing Shi, Hongjie Chen, Viet Dac Lai, Zhouhang Xie, Sungchul Kim, Ruiyi Zhang, Tong Yu, Mehrab Tanjim, Nesreen K. Ahmed, Puneet Mathur, Seunghyun Yoon, Lina Yao, Branislav Kveton, Jihyung Kil, Thien Huu Nguyen, Trung Bui, Tianyi Zhou, Ryan A. Rossi, Franck Dernoncourt",ACL 2025 Findings,https://2025.aclweb.org/,0,pdf,https://arxiv.org/pdf/2412.13501,0,0,0,0,0,0
 2025,conference,Toward Robust Hyper-Detailed Image Captioning: A Multiagent Approach and Dual Evaluation Metrics for Factuality and Coverage,"Saehyung Lee, Seunghyun Yoon, Trung Bui, Jing Shi, Sungroh Yoon",ICML 2025,https://icml.cc/,0,pdf,https://arxiv.org/abs/2412.15484,0,0,0,0,0,0
 2025,conference,NoLiMa: Long-Context Evaluation Beyond Literal Matching,"Ali Modarressi, Hanieh Deilamsalehy, Franck Dernoncourt, Trung Bui, Ryan A. Rossi, Seunghyun Yoon, Hinrich Schuetze",ICML 2025,https://icml.cc/,0,pdf,https://arxiv.org/abs/2502.05167,code,https://github.com/adobe-research/NoLiMa,0,0,0,0
 2025,conference,Generating Diverse Hypotheses for Inductive Reasoning,"Kang-il Lee, Hyukhun Koh, Dongryeol Lee, Seunghyun Yoon, Minsung Kim, Kyomin Jung",NAACL 2025 ,https://2025.naacl.org/,oral presentation,pdf,https://aclanthology.org/2025.naacl-long.429.pdf,0,0,0,0,0,0
